# sluss

./: .gitignore  Cargo.toml  QUICKSTART.md  README.md
crates/sluss/: Cargo.toml
crates/sluss-audit/: Cargo.toml
crates/sluss-audit/src/: lib.rs  queries.rs
crates/sluss-core/: Cargo.toml
crates/sluss-core/src/: lib.rs
crates/sluss-github/: Cargo.toml
crates/sluss-github/src/: lib.rs  publish.rs  snapshot.rs
crates/sluss-gitlab/: Cargo.toml
crates/sluss-gitlab/src/: forge.rs  lib.rs  publish.rs
crates/sluss-llm/: Cargo.toml
crates/sluss-llm/src/: lib.rs  parse.rs  prompt.rs
crates/sluss/src/: dash.rs  logcmd.rs  main.rs  pipeline.rs  server.rs  verify.rs
crates/sluss/src/dash/: value.rs
docs/: introducing-sluss.md
