[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mwigge/sluss"

[workspace.dependencies]
sluss-core = { path = "crates/sluss-core" }
sluss-audit = { path = "crates/sluss-audit" }
sluss-github = { path = "crates/sluss-github" }
sluss-gitlab = { path = "crates/sluss-gitlab" }
sluss-llm = { path = "crates/sluss-llm" }

anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
octocrab = "0.53"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "http2"] }
genai = "0.6"
