[package]
name = "sluss-audit"
description = "Append-only audit store — every event, never overwritten"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
