[package]
name = "sluss-github"
description = "GitHub side: check runs as decision records, reviews, merge gate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sluss-core.workspace = true
anyhow.workspace = true
octocrab.workspace = true
# Must track octocrab's jsonwebtoken major so EncodingKey types line up.
jsonwebtoken = "10"
serde.workspace = true
serde_json.workspace = true
