[package]
name = "sluss-gitlab"
description = "GitLab side: hand-written webhook payloads, MR notes and approvals"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# The API side is a small hand-rolled REST client (reqwest): the Kitware
# `gitlab` crate has no webhook payload types and a much larger surface than
# the five endpoints sluss needs.
[dependencies]
sluss-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
